# csc316-final-project

./: README.md  justfile  obs.py  pyproject.toml
.github/workflows/: main.yml
hk-mods/Abstraction/: Abstraction.cs  Abstraction.csproj  Drawing.cs  HitboxRender.cs  WhiteOcclusion.cs
hk-mods/SuperFancyInteropMod/: .gitignore  Bridge.cs  BridgeBehaviour.cs  SuperFancyInteropMod.cs  SuperFancyInteropMod.csproj
hk-mods/fuckthosethreeguysinparticular/: README.md
hk-mods/superfancyinterop/: README.md
src/csc316_final_project/: __init__.py  bridge.py  cv.py  keyboard_emulation.py  model_training.py  monitor.py  neural.py  object_detection.py  obs.py  stat_recorder.py  util.py  visualizer.py
