[project]
name = "csc316-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luna", email = "itsactuallyluna9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "rich>=14.1.0",
    "tensorflow[and-cuda]>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.scripts]
csc316-final-project = "csc316_final_project:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
